--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </header>
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="your-image-url-here" alt="Profile Picture" class="profile-pic">
+            <img src="./images/SUJAY MALL PHOTO.jpg" alt="Profile Picture" class="profile-pic">
             <h1>I am SUJAY SAKHARE</h1>
             <p>As a skilled full-stack developer, I am dedicated to turning ideas into innovative web applications. Explore my latest projects and articles, showcasing my expertise in web development.</p>
             <div class="buttons">
-                <a href="#" class="btn">Resume</a>
-                <a href="#" class="btn">Contact</a>
+                <a href="./about.html" class="btn">About Me</a>
+                <a href="./contact.html" class="btn">Contact</a>
             </div>
         </div>
     </section>
