--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <nav>
-            <div class="logo">CB</div>
+            <div class="logo">SS</div>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#articles">Articles</a></li>
+                
+                <li><a href="./about.html">About Me</a></li>
+                <li><a href="./project.html">Project</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -31,8 +31,8 @@
     </section>
     <footer>
         <div class="social-icons">
-            <a href="#">GitHub</a>
-            <a href="#">LinkedIn</a>
+            <a href="https://github.com">GitHub</a>
+            <a href="https://linkedin.com">LinkedIn</a>
             <a href="#">Pinterest</a>
             <a href="#">Twitter</a>
         </div>
