--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>I am SUJAY SAKHARE</h1>
             <p>As a skilled full-stack developer, I am dedicated to turning ideas into innovative web applications. Explore my latest projects and articles, showcasing my expertise in web development.</p>
             <div class="buttons">
-                <a href="./about.html" class="btn">About Me</a>
+                <a href="./about.html" class="btn">Resume</a>
                 <a href="./contact.html" class="btn">Contact</a>
             </div>
         </div>
