--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <div class="logo">SS</div>
             <ul>
-                
+                <li><a href="./skill.html">skill</a></li>
                 <li><a href="./about.html">About Me</a></li>
                 <li><a href="./project.html">Project</a></li>
-                
+                <li><a href="./extra.html">Extra-curricular Activity</a></li>
             </ul>
         </nav>
     </header>
@@ -33,8 +33,8 @@
         <div class="social-icons">
             <a href="https://github.com">GitHub</a>
             <a href="https://linkedin.com">LinkedIn</a>
-            <a href="#">Pinterest</a>
-            <a href="#">Twitter</a>
+            <a href="https://pinterest.com">Pinterest</a>
+            <a href="https://twitter.com">Twitter</a>
         </div>
     </footer>
 </body>
